senpai/tests/cases/error/ternary_non_bool_condition.sen
fn main():
    let y = 1 if 42 else 0
